samples/cmdassets/tool-result-20250331-171951-xs6i77.txt
> filechat@0.1.0 compile
> npm run esbuild


> filechat@0.1.0 esbuild
> npm run esbuild-base -- --sourcemap


> filechat@0.1.0 esbuild-base
> node ./esbuild.js --sourcemap

Cleaning dist directory...
✘ [ERROR] Expected ";" but found "{"

    src/listener.ts:392:19:
      392 │     if (!acquired) {
          │                    ^
          ╵                    ;

1 error
Build failed: Error: Build failed with 1 error:
src/listener.ts:392:19: ERROR: Expected ";" but found "{"
    at failureErrorWithLog (/Users/arusia/repos/filechat/node_modules/esbuild/lib/main.js:1477:15)
    at /Users/arusia/repos/filechat/node_modules/esbuild/lib/main.js:946:25
    at /Users/arusia/repos/filechat/node_modules/esbuild/lib/main.js:898:52
    at buildResponseToResult (/Users/arusia/repos/filechat/node_modules/esbuild/lib/main.js:944:7)
    at /Users/arusia/repos/filechat/node_modules/esbuild/lib/main.js:956:9
    at new Promise (<anonymous>)
    at requestCallbacks.on-end (/Users/arusia/repos/filechat/node_modules/esbuild/lib/main.js:955:54)
    at handleRequest (/Users/arusia/repos/filechat/node_modules/esbuild/lib/main.js:648:17)
    at handleIncomingPacket (/Users/arusia/repos/filechat/node_modules/esbuild/lib/main.js:673:7)
    at Socket.readFromStdout (/Users/arusia/repos/filechat/node_modules/esbuild/lib/main.js:601:7) {
  errors: [Getter/Setter],
  warnings: [Getter/Setter]
}

---

status = process exited
cwd = /Users/arusia/repos/filechat